--- a/index.html
+++ b/index.html
@@ -1,6 +1,42 @@
 <!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <body>
-<h1>Hello World I'm Alex</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+	<div class="gradientes gradientes--barra">
+	
+	</div>
+	
+	<ul class="topnav">
+		<li><a class="active" href="#home">Home</a></li>
+		<li><a href="#news">News</a></li>
+		<li><a href="#contact">Contact</a></li>
+		<li class="right"><a href="#about">About</a></li>
+	</ul>
+	
+	</div>
+		<h1>Hello World I'm Alex</h1>
+		<p>I'm hosted with GitHub Pages.</p>
+		
+		
+		<p>Palindromos.
+		
+		contar que letras son por ejemplo saltar
+		s=1, a=2, l=1, a=1, r=1
+		empezar por el primero y buscar si hay alguna palabra empezando por la misma letra que contenga 
+		nada no funciona creo
+		</p>
+		
+		
+		<p>
+		PARA este ALGORTIMO utilizar hash table/Mapa por numero de longitud 
+		mirar la palabra mas larga en el diccionario
+		e ir comparando con la misma longitud con el primer caracter
+		sino con el primero y segundo con menos 1 de longitud
+		</p>
 </body>
 </html>
