shaping the original
Algunas fotos , la barra ya responde y un par de iconos de las paginas sociales

--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+
+	<title>Eurobots</title>
+	<!-- social media buttons script-->	<script src="https://use.fontawesome.com/8181bf0991.js"></script>
+	
+	<link rel="stylesheet" href="styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="myscript.js"></script>
 </head>
 
-<body>
 
-	<div class="gradientes gradientes--barra">
-	
-	</div>
-	
-	<ul class="topnav">
-		<li><a class="active" href="#home">Home</a></li>
-		<li><a href="#news">News</a></li>
-		<li><a href="#contact">Contact</a></li>
-		<li class="right"><a href="#about">About</a></li>
-	</ul>
-	
-	</div>
-		<h1>Hello World I'm Alex</h1>
+<body>
+<div class="topTopnav" id="topTopnav">
+	<a href="#home" class="logo">
+        <img src="imgSlide/logo.png" alt="eurobots">
+    </a>
+</div>
+
+<div class="topnav" id="myTopnav">
+		<a class="active" href="#home">HOME</a>
+		<a href="#usedRobots">PRODUCTS</a>
+		<a href="#welding">WELDING </a>
+		<a href="#milling">MILLING PACKAGE</a>
+		<a href="#spareParts">SPARE PARTS</a>
+		<a href="#about">ABOUT US</a>
+	<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
+
+
+	<div class="cuerpo">
+		<h1>Hello World</h1>
 		<p>I'm hosted with GitHub Pages.</p>
 		
 		
@@ -32,11 +44,32 @@
 		</p>
 		
 		
+		
 		<p>
 		PARA este ALGORTIMO utilizar hash table/Mapa por numero de longitud 
 		mirar la palabra mas larga en el diccionario
 		e ir comparando con la misma longitud con el primer caracter
 		sino con el primero y segundo con menos 1 de longitud
 		</p>
+	</div>	
+	
+	<div class="ex1">
+	<a href="http://www.facebook.com/eurobots" target="_blank">
+		<i class="fa fa-facebook-f" style="font-size:33px"></i>
+	</a>
+	<a href="https://plus.google.com/100464904590810318852" rel="publisher" target="_blank">
+		<i class="fa fa-google-plus" style="font-size:33px"></i>
+    </a>
+	<a href="http://www.youtube.com/user/usedrobot2008#p/u" target="_blank">
+        <i class="fa fa-youtube" style="font-size:33px;"></i>
+    </a>
+	<a href="http://twitter.com/matteotenti" target="_blank">
+		<i class="fa fa-twitter" style="font-size:33px"></i>
+	</a>
+	
+	</div>
 </body>
+
+<footer class="footnote">&copy; Copyright 2017 GitHub Pages & AYXWORKS</footer>
+
 </html>
