--- a/index.html
+++ b/index.html
@@ -5,28 +5,60 @@
 
 	<title>Eurobots</title>
 	<!-- social media buttons script-->	<script src="https://use.fontawesome.com/8181bf0991.js"></script>
-	
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="myscript.js"></script>
+	
+	
+	<!-- tryout w3 template-->
+	<link rel="stylesheet" href="./templatefull_files/w3.css">
+	
 </head>
 
+<div id="banner">
+	     <h2>FOTO BANNER</h2>
+     <h2>put what you want here</h2>
+     <p>just adjust javascript size to match this window</p>
+  </div>
 
+  <nav id='nav_bar'>
+    <ul class='nav_links'>
+      <li><a href="url">Nav Bar</a></li>
+      <li><a href="url">Sign In</a></li>
+      <li><a href="url">Blog</a></li>
+      <li><a href="url">About</a></li>
+    </ul>
+  </nav>
+<div id='body_div'>
+    
 <body>
-<div class="topTopnav" id="topTopnav">
-	<a href="#home" class="logo">
+
+		  <div class="w3-bar w3-white w3-wide w3-padding w3-card-2">
+			<a href="#home" class="w3-bar-item w3-button"><b>AY</b> Ayxworks</a>
+			<!-- Float links to the right. Hide them on small screens --> 
+			<div class="w3-right w3-hide-small">
+			  <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+			  <a href="#about" class="w3-bar-item w3-button">About</a>
+			  <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+			</div>
+		  </div>
+
+<div class="topTopnav" id="topTopnav"> 
+	<a href="https://www.eurobots.net/" class="logo">
         <img src="imgSlide/logo.png" alt="eurobots">
     </a>
 </div>
 
 <div class="topnav" id="myTopnav">
+	<div class="blockBar">
 		<a class="active" href="#home">HOME</a>
 		<a href="#usedRobots">PRODUCTS</a>
 		<a href="#welding">WELDING </a>
 		<a href="#milling">MILLING PACKAGE</a>
 		<a href="#spareParts">SPARE PARTS</a>
-		<a href="#about">ABOUT US</a>
 	<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+	</div>
 </div>
 
 
@@ -53,6 +85,21 @@
 		</p>
 	</div>	
 	
+	<div id="googleMap" style="width:100%;height:400px;"></div>
+
+<script>
+function myMap() {
+var mapProp= {
+    center:new google.maps.LatLng(51.508742,-0.120850),
+    zoom:5,
+};
+var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAARF7ltPnzYKfjD3iiooVTsnjo6sE8L2Y&callback=myMap"></script>
+
+	
 	<div class="ex1">
 	<a href="http://www.facebook.com/eurobots" target="_blank">
 		<i class="fa fa-facebook-f" style="font-size:33px"></i>
@@ -70,6 +117,9 @@
 	</div>
 </body>
 
-<footer class="footnote">&copy; Copyright 2017 GitHub Pages & AYXWORKS</footer>
+</div>
+
+
+<footer class="footnote">&copy; Copyright 2017 GitHub Pages & ayxworks</footer>
 
 </html>
