fix responsive page and fixed nav bar
responsive page seems to work now and responsive fixed navigation bar at the top

--- a/index.html
+++ b/index.html
@@ -2,20 +2,17 @@
 <html>
 <head>
 <meta charset="UTF-8">
-
 	<title>Eurobots</title>
 	<!-- social media buttons script-->	<script src="https://use.fontawesome.com/8181bf0991.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!-- jquery-->	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="myscript.js"></script>
-	
-	
-	<!-- tryout w3 template-->
-	<link rel="stylesheet" href="./templatefull_files/w3.css">
-	
 </head>
-
+    
+	
+	
+<body>
 <div id="banner">
 	     <h2>FOTO BANNER</h2>
      <h2>put what you want here</h2>
@@ -31,9 +28,6 @@
     </ul>
   </nav>
 <div id='body_div'>
-    
-<body>
-
 		  <div class="w3-bar w3-white w3-wide w3-padding w3-card-2">
 			<a href="#home" class="w3-bar-item w3-button"><b>AY</b> Ayxworks</a>
 			<!-- Float links to the right. Hide them on small screens --> 
@@ -46,7 +40,7 @@
 
 <div class="topTopnav" id="topTopnav"> 
 	<a href="https://www.eurobots.net/" class="logo">
-        <img src="imgSlide/logo.png" alt="eurobots">
+        <img src="imgSlide/logoNowhite.png" alt="eurobots">
     </a>
 </div>
 
