--- a/AboutUs.html
+++ b/AboutUs.html
@@ -33,11 +33,13 @@
 <div id='body_div'>
 		<nav id='nav_bar'>
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
-			<a href="#banner" class="w3-bar-item w3-button"><b>AY</b> Ayxworks</a>			<div class="w3-right w3-hide-small">
+			<a href="index.html#banner" class="w3-bar-item w3-button"><b>AY</b> Ayxworks</a>
+			<!-- Float links to the right. Hide them on small screens --> 
+			<div class="w3-right w3-hide-small">
 			  <a href="products.html" class="w3-bar-item w3-button">Products</a>
-			  <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+			  <a href="index.html#projects" class="w3-bar-item w3-button">Projects</a>
 			  <a href="AboutUs.html" class="w3-bar-item w3-button active">About Us</a>
-			  <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+			  <a href="index.html#contact" class="w3-bar-item w3-button">Contact</a>
 			</div>
 		  </div>
 		</nav>
@@ -49,7 +51,7 @@
 
 <div class="topnav" id="myTopnav">
 	<div class="blockBar">
-		<a class="active" href="index.html#banner">HOME</a>
+		<a href="index.html#banner">HOME</a>
 		<a href="products.html#usedRobots">ROBOTS</a>
 		<a href="integration.html#welding">WELDING </a>
 		<a href="integration.html#milling">MILLING PACKAGE</a>
@@ -58,10 +60,12 @@
 	</div>
 </div>
 
+
+
 <!-- CUERPO DE LA PAGINA	-->
 
 	<div class="cuerpo">
-		<h1>PAGINA PRINCIPAL</h1>
+		<h1>ABOUT US</h1>
 		<p>I'm hosted with GitHub Pages.</p>
 		
 		
@@ -168,6 +172,12 @@
 			</table>
 	</div>	
 <!-- NO TOCAR ABAJO	-->
+	
+	<div id="googleMap" style="width:100%;height:400px;"></div>
+
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAARF7ltPnzYKfjD3iiooVTsnjo6sE8L2Y&callback=myMap"></script>
+
+	
 	<div class="ex1">
 	<a href="http://www.facebook.com/eurobots" target="_blank">
 		<i class="fa fa-facebook-f" style="font-size:33px"></i>
