--- a/products.html
+++ b/products.html
@@ -33,11 +33,13 @@
 <div id='body_div'>
 		<nav id='nav_bar'>
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
-			<a href="#banner" class="w3-bar-item w3-button"><b>AY</b> Ayxworks</a>			<div class="w3-right w3-hide-small">
+			<a href="#home" class="w3-bar-item w3-button"><b>AY</b> Ayxworks</a>
+			<!-- Float links to the right. Hide them on small screens --> 
+			<div class="w3-right w3-hide-small">
 			  <a href="products.html" class="w3-bar-item w3-button">Products</a>
-			  <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+			  <a href="index.html#projects" class="w3-bar-item w3-button">Projects</a>
 			  <a href="AboutUs.html" class="w3-bar-item w3-button active">About Us</a>
-			  <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+			  <a href="index.html#contact" class="w3-bar-item w3-button">Contact</a>
 			</div>
 		  </div>
 		</nav>
@@ -49,19 +51,20 @@
 
 <div class="topnav" id="myTopnav">
 	<div class="blockBar">
-		<a class="active" href="index.html#banner">HOME</a>
-		<a href="products.html#usedRobots">ROBOTS</a>
+		<a href="index.html#banner">HOME</a>
+		<a class="active" href="#usedRobots">ROBOTS</a>
 		<a href="integration.html#welding">WELDING </a>
 		<a href="integration.html#milling">MILLING PACKAGE</a>
-		<a href="products.html#spareParts">SPARE PARTS</a>
+		<a href="#spareParts">SPARE PARTS</a>
 	<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 	</div>
 </div>
 
+
 <!-- CUERPO DE LA PAGINA	-->
 
 	<div class="cuerpo">
-		<h1>PAGINA PRINCIPAL</h1>
+		<h1>PRODUCTS<h1>
 		<p>I'm hosted with GitHub Pages.</p>
 		
 		
