ayxworks apunta a nav
cambio de ir arriba a apuntar a la barra de navegacion

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -33,7 +33,7 @@
 <div id='body_div'>
 		<nav id='nav_bar'>
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
-			<a href="index.html#banner" class="w3-bar-item w3-button"><b>AY</b> Ayxworks</a>
+			<a href="#myTopnav" class="w3-bar-item w3-button"><b>AY</b> Ayxworks</a>		
 			<!-- Float links to the right. Hide them on small screens --> 
 			<div class="w3-right w3-hide-small">
 			  <a href="products.html" class="w3-bar-item w3-button">Products</a>
