--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <div id='body_div'>
 		<nav id='nav_bar'>
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
-			<a href="#banner" class="w3-bar-item w3-button"><b>AY</b> Ayxworks</a>			<div class="w3-right w3-hide-small">
+			<a href="#myTopnav" class="w3-bar-item w3-button"><b>AY</b> Ayxworks</a>			
+			<div class="w3-right w3-hide-small">
 			  <a href="products.html" class="w3-bar-item w3-button">Products</a>
 			  <a href="#projects" class="w3-bar-item w3-button">Projects</a>
 			  <a href="AboutUs.html" class="w3-bar-item w3-button active">About Us</a>
