--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
 <body>
 <div id="banner">
 <div class="w3-content w3-section w3-display-container">
-	<img class="mySlides" src="imgSlide/slide0.jpg" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide1.png" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide2.png" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide3.png" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide4.png" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide5.png" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide6.jpg" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide7.jpg" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide8.jpg" style="width:100%">
-	 <div class="w3-center w3-display-bottommiddle" style="width:100%">
+	<img class="mySlides" src="imgSlide/slide0.jpg" style="height: 450px">
+	<img class="mySlides" src="imgSlide/slide1.png" style="height: 450px">
+	<img class="mySlides" src="imgSlide/slide2.png" style="height: 450px">
+	<img class="mySlides" src="imgSlide/slide3.png" style="height: 450px">
+	<img class="mySlides" src="imgSlide/slide4.png" style="height: 450px">
+	<img class="mySlides" src="imgSlide/slide5.png" style="height: 450px">
+	<img class="mySlides" src="imgSlide/slide6.jpg" style="height: 450px">
+	<img class="mySlides" src="imgSlide/slide7.jpg" style="height: 450px">
+	<img class="mySlides" src="imgSlide/slide8.jpg" style="height: 450px">
 </div>
 </div>
 
@@ -42,9 +41,10 @@
 			</div>
 		  </div>
 		</nav>
+		
 <div class="topTopnav" id="topTopnav"> 
 	<a href="https://www.ayxworks.tk/" class="logo">
-        <img src="imgSlide/logoNowhite.png" alt="fanrobotarms">
+        <img src="imgSlide/logoNowhite.png" alt="fanrobotarms" width="200px" height="auto">
     </a>
 </div>
 
