--- a/index.html
+++ b/index.html
@@ -17,22 +17,21 @@
 <body>
 <div id="banner">
 <div class="w3-content w3-section w3-display-container">
-	<img class="mySlides" src="imgSlide/slide0.jpg" style="height: 450px">
-	<img class="mySlides" src="imgSlide/slide1.png" style="height: 450px">
-	<img class="mySlides" src="imgSlide/slide2.png" style="height: 450px">
-	<img class="mySlides" src="imgSlide/slide3.png" style="height: 450px">
-	<img class="mySlides" src="imgSlide/slide4.png" style="height: 450px">
-	<img class="mySlides" src="imgSlide/slide5.png" style="height: 450px">
-	<img class="mySlides" src="imgSlide/slide6.jpg" style="height: 450px">
-	<img class="mySlides" src="imgSlide/slide7.jpg" style="height: 450px">
-	<img class="mySlides" src="imgSlide/slide8.jpg" style="height: 450px">
+	<img class="mySlides" src="imgSlide/slide1.jpg" style="height: 450px">
+	<img class="mySlides" src="imgSlide/slide2.jpg" style="height: 450px">
+	<img class="mySlides" src="imgSlide/slide3.jpg" style="height: 450px">
+	<img class="mySlides" src="imgSlide/slide4.jpg" style="height: 450px">
 </div>
 </div>
+
+<a name="myanchor">
+    <h1 style="padding-top: 40px; margin-top: -40px;"></h1>
+</a>
 
 <div id='body_div'>
 		<nav id='nav_bar'>
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
-			<a href="#topTopnav" class="w3-bar-item w3-button"><b>AY</b> Ayxworks</a>			
+			<a href="#myanchor" class="w3-bar-item w3-button"><img src="imgSlide/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
 			<div class="w3-right w3-hide-small">
 			  <a href="products.html" class="w3-bar-item w3-button">Products</a>
 			  <a href="#projects" class="w3-bar-item w3-button">Projects</a>
@@ -42,11 +41,7 @@
 		  </div>
 		</nav>
 		
-<div class="topTopnav" id="topTopnav"> 
-	<a href="https://www.ayxworks.tk/" class="logo">
-        <img src="imgSlide/logoNowhite.png" alt="fanrobotarms" width="200px" height="auto">
-    </a>
-</div>
+		
 
 <div class="topnav" id="myTopnav">
 	<div class="blockBar">
@@ -189,6 +184,6 @@
 </div>
 
 
-<footer class="footnote">&copy; Copyright 2017 GitHub Pages & ayxworks</footer>
+<footer class="footnote">&copy; Copyright 2017 GitHub Pages, ayxworks & FanRobotArms | ALL RIGHTS RESERVED</footer>
 
 </html>
