--- a/integration.html
+++ b/integration.html
@@ -15,26 +15,10 @@
 	
 	
 <body>
-<div id="banner">
-<div class="w3-content w3-section w3-display-container">
-	<img class="mySlides" src="imgSlide/slide0.jpg" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide1.png" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide2.png" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide3.png" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide4.png" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide5.png" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide6.jpg" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide7.jpg" style="width:100%">
-	<img class="mySlides" src="imgSlide/slide8.jpg" style="width:100%">
-	 <div class="w3-center w3-display-bottommiddle" style="width:100%">
-</div>
-</div>
-
 <div id='body_div'>
 		<nav id='nav_bar'>
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
-			<a href="#topTopnav" class="w3-bar-item w3-button"><b>AY</b> Ayxworks</a>		
-			<!-- Float links to the right. Hide them on small screens --> 
+			<a href="#top" class="w3-bar-item w3-button"><img src="imgSlide/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
 			<div class="w3-right w3-hide-small">
 			  <a href="products.html" class="w3-bar-item w3-button">Products</a>
 			  <a href="index.html#projects" class="w3-bar-item w3-button">Projects</a>
@@ -43,15 +27,14 @@
 			</div>
 		  </div>
 		</nav>
-<div class="topTopnav" id="topTopnav"> 
-	<a href="https://www.ayxworks.tk/" class="logo">
-        <img src="imgSlide/logoNowhite.png" alt="fanrobotarms">
-    </a>
-</div>
+		
+<a name="myanchor">
+    <h1 style="padding-top: 40px; margin-top: -40px;"></h1>
+</a>
 
 <div class="topnav" id="myTopnav">
 	<div class="blockBar">
-		<a href="index.html#banner">HOME</a>
+		<a class="active" href="index.html#banner">HOME</a>
 		<a href="products.html#usedRobots">ROBOTS</a>
 		<a class="active" href="#welding">WELDING </a>
 		<a class="active" href="#milling">MILLING PACKAGE</a>
@@ -192,6 +175,8 @@
 </div>
 
 
-<footer class="footnote">&copy; Copyright 2017 GitHub Pages & ayxworks</footer>
+
+<footer class="footnote">&copy; Copyright 2017 GitHub Pages, ayxworks & FanRobotArms | ALL RIGHTS RESERVED</footer>
+
 
 </html>
