change responsiveness and name of the tabs
nombre descriptivo y la barra

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-	<title>Eurobots</title>
+	<title>About Us Fan of Robot Arms</title>
 	<!-- social media buttons script-->	<script src="https://use.fontawesome.com/8181bf0991.js"></script>
 	<!-- jquery-->	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- <link rel="stylesheet" href="styles.css"> -->
