--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-	<title>Eurobots</title>
+	<title>Fan of Robot Arms HOME PAGE</title>
 	<!-- social media buttons script-->	<script src="https://use.fontawesome.com/8181bf0991.js"></script>
 	<!-- jquery-->	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- <link rel="stylesheet" href="styles.css"> -->
@@ -17,10 +17,10 @@
 <body>
 <div id="banner">
 <div class="w3-content w3-section w3-display-container">
-	<img class="mySlides" src="imgSlide/slide1.jpg" style="height: 450px">
-	<img class="mySlides" src="imgSlide/slide2.jpg" style="height: 450px">
-	<img class="mySlides" src="imgSlide/slide3.jpg" style="height: 450px">
-	<img class="mySlides" src="imgSlide/slide4.jpg" style="height: 450px">
+	<img class="mySlides" src="imgSlide/slide1.jpg" style="width:100% ">
+	<img class="mySlides" src="imgSlide/slide2.jpg" style="width:100% ">
+	<img class="mySlides" src="imgSlide/slide3.jpg" style="width:100% ">
+	<img class="mySlides" src="imgSlide/slide4.jpg" style="width:100% ">
 </div>
 </div>
 
@@ -45,7 +45,7 @@
 
 <div class="topnav" id="myTopnav">
 	<div class="blockBar">
-		<a class="active" href="index.html#banner">HOME</a>
+		<a href="index.html#banner">HOME</a>
 		<a href="products.html#usedRobots">ROBOTS</a>
 		<a href="integration.html#welding">WELDING </a>
 		<a href="integration.html#milling">MILLING PACKAGE</a>
