--- a/AboutUs.html
+++ b/AboutUs.html
@@ -12,7 +12,14 @@
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
     
-	
+	<div id="banner">
+<div class="w3-content w3-section w3-display-container">
+	<img class="mySlides" src="imgSlide/slide1.jpg" style="width:100% ">
+	<img class="mySlides" src="imgSlide/slide2.jpg" style="width:100% ">
+	<img class="mySlides" src="imgSlide/slide3.jpg" style="width:100% ">
+	<img class="mySlides" src="imgSlide/slide4.jpg" style="width:100% ">
+</div>
+</div>
 	
 <body>
 
@@ -39,7 +46,7 @@
 		<a href="products.html#usedRobots">ROBOTS</a>
 		<a href="integration.html#welding">WELDING </a>
 		<a href="integration.html#milling">MILLING PACKAGE</a>
-		<a href="products.html#spareParts">SPARE PARTS</a>
+		<a href="spareparts.html#spareParts">SPARE PARTS</a>
 	<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 	</div>
 </div>
@@ -50,135 +57,36 @@
 
 	<div class="cuerpo">
 		<h1>ABOUT US</h1>
-		<p>I'm hosted with GitHub Pages.</p>
-		
-		
-		<p>Palindromos.
-		
-		contar que letras son por ejemplo saltar
-		s=1, a=2, l=1, a=1, r=1
-		empezar por el primero y buscar si hay alguna palabra empezando por la misma letra que contenga 
-		nada no funciona creo
-		</p>
-		
-		
-		
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-			elit. Aenean commodo ligula eget dolor. Aenean massa 
-			<strong>strong</strong>. Cum sociis natoque penatibus 
-			et magnis dis parturient montes, nascetur ridiculus 
-			mus. Donec quam felis, ultricies nec, pellentesque 
-			eu, pretium quis, sem. Nulla consequat massa quis 
-			enim. Donec pede justo, fringilla vel, aliquet nec, 
-			vulputate eget, arcu. In enim justo, rhoncus ut, 
-			imperdiet a, venenatis vitae, justo. Nullam dictum 
-			felis eu pede <a class="external ext" href="#">link</a> 
-			mollis pretium. Integer tincidunt. Cras dapibus. 
-			Vivamus elementum semper nisi. Aenean vulputate 
-			eleifend tellus. Aenean leo ligula, porttitor eu, 
-			consequat vitae, eleifend ac, enim. Aliquam lorem ante, 
-			dapibus in, viverra quis, feugiat a, tellus. Phasellus 
-			viverra nulla ut metus varius laoreet. Quisque rutrum. 
-			Aenean imperdiet. Etiam ultricies nisi vel augue. 
-			Curabitur ullamcorper ultricies nisi.</p>
-			<h1>Lorem ipsum dolor sit amet consectetuer adipiscing 
-			elit</h1>
-			<h2>Aenean commodo ligula eget dolor aenean massa</h2>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-			elit. Aenean commodo ligula eget dolor. Aenean massa. 
-			Cum sociis natoque penatibus et magnis dis parturient 
-			montes, nascetur ridiculus mus. Donec quam felis, 
-			ultricies nec, pellentesque eu, pretium quis, sem.</p>
-			<h2>Aenean commodo ligula eget dolor aenean massa</h2>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-			elit. Aenean commodo ligula eget dolor. Aenean massa. 
-			Cum sociis natoque penatibus et magnis dis parturient 
-			montes, nascetur ridiculus mus. Donec quam felis, 
-			ultricies nec, pellentesque eu, pretium quis, sem.</p>
-			<ul>
-			  <li>Lorem ipsum dolor sit amet consectetuer.</li>
-			  <li>Aenean commodo ligula eget dolor.</li>
-			  <li>Aenean massa cum sociis natoque penatibus.</li>
-			</ul>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-			elit. Aenean commodo ligula eget dolor. Aenean massa. 
-			Cum sociis natoque penatibus et magnis dis parturient 
-			montes, nascetur ridiculus mus. Donec quam felis, 
-			ultricies nec, pellentesque eu, pretium quis, sem.</p>
-			<form action="#" method="post">
-			  <fieldset>
-				<label for="name">Name:</label>
-				<input type="text" id="name" placeholder="Enter your 
-			full name" />
 
-				<label for="email">Email:</label>
-				<input type="email" id="email" placeholder="Enter 
-			your email address" />
+		
 
-				<label for="message">Message:</label>
-				<textarea id="message" placeholder="What's on your 
-			mind?"></textarea>
-
-				<input type="submit" value="Send message" />
-
-			  </fieldset>
-			</form>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-			elit. Aenean commodo ligula eget dolor. Aenean massa. 
-			Cum sociis natoque penatibus et magnis dis parturient 
-			montes, nascetur ridiculus mus. Donec quam felis, 
-			ultricies nec, pellentesque eu, pretium quis, sem.</p>
-			<table class="data">
-			  <tr>
-				<th>Entry Header 1</th>
-				<th>Entry Header 2</th>
-				<th>Entry Header 3</th>
-				<th>Entry Header 4</th>
-			  </tr>
-			  <tr>
-				<td>Entry First Line 1</td>
-				<td>Entry First Line 2</td>
-				<td>Entry First Line 3</td>
-				<td>Entry First Line 4</td>
-			  </tr>
-			  <tr>
-				<td>Entry Line 1</td>
-				<td>Entry Line 2</td>
-				<td>Entry Line 3</td>
-				<td>Entry Line 4</td>
-			  </tr>
-			  <tr>
-				<td>Entry Last Line 1</td>
-				<td>Entry Last Line 2</td>
-				<td>Entry Last Line 3</td>
-				<td>Entry Last Line 4</td>
-			  </tr>
-			</table>
 	</div>	
 <!-- NO TOCAR ABAJO	-->
-	
-	<div id="googleMap" style="width:100%;height:400px;"></div>
 
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAARF7ltPnzYKfjD3iiooVTsnjo6sE8L2Y&callback=myMap"></script>
-
-	
 	<div class="ex1">
+
+<!-- 	
 	<a href="http://www.facebook.com/eurobots" target="_blank">
-		<i class="fa fa-facebook-f" style="font-size:33px"></i>
+		<i class="fa fa-facebook-f" style="font-size:50px"></i>
 	</a>
 	<a href="https://plus.google.com/100464904590810318852" rel="publisher" target="_blank">
-		<i class="fa fa-google-plus" style="font-size:33px"></i>
+		<i class="fa fa-google-plus" style="font-size:50px"></i>
     </a>
 	<a href="http://www.youtube.com/user/usedrobot2008#p/u" target="_blank">
-        <i class="fa fa-youtube" style="font-size:33px;"></i>
+        <i class="fa fa-youtube" style="font-size:50px;"></i>
     </a>
 
-	<a href="" target="_blank">
-		<i class="fa fa-linkedin" style="font-size:33px"></i>
+-->	
+	<a href="http://www.youku.com/" class="youkuIcon" target="_blank">
+		<img class="youkuIcon" src="logo/youku.svg" width="65px" height="65px"></img>
 	</a>
-
+	<a href="weixin://dl/chat?{fanye2013bilbao}" target="_blank">
+		<img src="logo/wechat.svg" width="50px" height="50px"></img>
+	</a>
 	
 	</div>
+	
+	
 </body>
 
 </div>
