--- a/spareparts.html
+++ b/spareparts.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-	<title>Integration of Robot Arms</title>
+	<title>Products Fan of Robot Arms</title>
 	<!-- social media buttons script-->	<script src="https://use.fontawesome.com/8181bf0991.js"></script>
 	<!-- jquery-->	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- <link rel="stylesheet" href="styles.css"> -->
@@ -20,7 +20,7 @@
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
 			<a href="#top" class="w3-bar-item w3-button"><img src="imgSlide/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
 			<div class="w3-right w3-hide-small">
-			  <a href="products.html" class="w3-bar-item w3-button">Products</a>
+			  <a href="#products" class="w3-bar-item w3-button">Products</a>
 			  <a href="index.html#projects" class="w3-bar-item w3-button">Projects</a>
 			  <a href="AboutUs.html" class="w3-bar-item w3-button active">About Us</a>
 			  <a href="index.html#contact" class="w3-bar-item w3-button">Contact</a>
@@ -34,21 +34,27 @@
 
 <div class="topnav" id="myTopnav">
 	<div class="blockBar">
-		<a class="active" href="index.html#banner">HOME</a>
-		<a href="products.html#usedRobots">ROBOTS</a>
-		<a class="active" href="#welding">WELDING </a>
-		<a class="active" href="#milling">MILLING PACKAGE</a>
-		<a href="spareparts.html#spareParts">SPARE PARTS</a>
+		<a href="index.html#banner">HOME</a>
+		<a href="#usedRobots">ROBOTS</a>
+		<a href="integration.html#welding">WELDING </a>
+		<a href="integration.html#milling">MILLING PACKAGE</a>
+		<a class="active" href="#spareParts">SPARE PARTS</a>
 	<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 	</div>
 </div>
 
 
-
 <!-- CUERPO DE LA PAGINA	-->
 
-  <div class="w3-container w3-padding-32" id="welding">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Welding</h3>
+	<div class="cuerpo">
+		
+  <!-- Products Section -->
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16"></h3>
+  </div>
+ 
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Electronic Cards</h3>
   </div>
 
   <div class="w3-row-padding">
@@ -133,9 +139,183 @@
   												<div>
 													<h3>VIEW MORE</h3>
 												</div>
-  
-  <div class="w3-container w3-padding-32" id="milling">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">MILLING</h3>
+<!-- ANOTHER SECTION -->
+
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Mechanichal Parts</h3>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">1st project test</div>
+        <img src="./imgSlide/smaller/slide1.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">2st project test</div>
+        <img src="./imgSlide/smaller/slide3.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">3st project test</div>
+        <img src="./imgSlide/smaller/slide1.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">4st project test</div>
+        <img src="./imgSlide/smaller/slide4.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">5st project test</div>
+        <img src="./imgSlide/smaller/slide4.png" alt="test2" style="width:99%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">6st project test</div>
+        <img src="./imgSlide/smaller/slide3.png" alt="test2" style="width:99%">
+       </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">7st project test</div>
+        <img src="./imgSlide/smaller/slide4.png" alt="test2" style="width:99%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">8st project test</div>
+        <img src="./imgSlide/smaller/slide1.png" alt="test2" style="width:99%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+  </div>
+    											<div>
+													<h3>VIEW MORE</h3>
+												</div>
+
+ <!-- ANOTHER SECTION -->
+
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Cabin Parts</h3>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">1st project test</div>
+        <img src="./imgSlide/smaller/slide1.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">2st project test</div>
+        <img src="./imgSlide/smaller/slide3.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">3st project test</div>
+        <img src="./imgSlide/smaller/slide1.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">4st project test</div>
+        <img src="./imgSlide/smaller/slide4.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">5st project test</div>
+        <img src="./imgSlide/smaller/slide4.png" alt="test2" style="width:99%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">6st project test</div>
+        <img src="./imgSlide/smaller/slide3.png" alt="test2" style="width:99%">
+       </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">7st project test</div>
+        <img src="./imgSlide/smaller/slide4.png" alt="test2" style="width:99%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">8st project test</div>
+        <img src="./imgSlide/smaller/slide1.png" alt="test2" style="width:99%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+  </div>
+    											<div>
+													<h3>VIEW MORE</h3>
+												</div> 
+  <!-- ANOTHER SECTION -->
+
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Others</h3>
   </div>
 
   <div class="w3-row-padding">
@@ -242,7 +422,6 @@
 	</a>
 	
 	</div>
-	
 	
 	
 </body>
