--- a/products.html
+++ b/products.html
@@ -34,11 +34,11 @@
 
 <div class="topnav" id="myTopnav">
 	<div class="blockBar">
-		<a class="active" href="index.html#banner">HOME</a>
-		<a href="#usedRobots">ROBOTS</a>
+		<a href="index.html#banner">HOME</a>
+		<a class="active" href="#usedRobots">ROBOTS</a>
 		<a href="integration.html#welding">WELDING </a>
 		<a href="integration.html#milling">MILLING PACKAGE</a>
-		<a href="#spareParts">SPARE PARTS</a>
+		<a href="spareparts.html#spareParts">SPARE PARTS</a>
 	<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 	</div>
 </div>
@@ -47,128 +47,210 @@
 <!-- CUERPO DE LA PAGINA	-->
 
 	<div class="cuerpo">
-		<h1>PRODUCTS<h1>
-		<p>I'm hosted with GitHub Pages.</p>
 		
-		
-		<p>Palindromos.
-		
-		contar que letras son por ejemplo saltar
-		s=1, a=2, l=1, a=1, r=1
-		empezar por el primero y buscar si hay alguna palabra empezando por la misma letra que contenga 
-		nada no funciona creo
-		</p>
-		
-		
-		
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-			elit. Aenean commodo ligula eget dolor. Aenean massa 
-			<strong>strong</strong>. Cum sociis natoque penatibus 
-			et magnis dis parturient montes, nascetur ridiculus 
-			mus. Donec quam felis, ultricies nec, pellentesque 
-			eu, pretium quis, sem. Nulla consequat massa quis 
-			enim. Donec pede justo, fringilla vel, aliquet nec, 
-			vulputate eget, arcu. In enim justo, rhoncus ut, 
-			imperdiet a, venenatis vitae, justo. Nullam dictum 
-			felis eu pede <a class="external ext" href="#">link</a> 
-			mollis pretium. Integer tincidunt. Cras dapibus. 
-			Vivamus elementum semper nisi. Aenean vulputate 
-			eleifend tellus. Aenean leo ligula, porttitor eu, 
-			consequat vitae, eleifend ac, enim. Aliquam lorem ante, 
-			dapibus in, viverra quis, feugiat a, tellus. Phasellus 
-			viverra nulla ut metus varius laoreet. Quisque rutrum. 
-			Aenean imperdiet. Etiam ultricies nisi vel augue. 
-			Curabitur ullamcorper ultricies nisi.</p>
-			<h1>Lorem ipsum dolor sit amet consectetuer adipiscing 
-			elit</h1>
-			<h2>Aenean commodo ligula eget dolor aenean massa</h2>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-			elit. Aenean commodo ligula eget dolor. Aenean massa. 
-			Cum sociis natoque penatibus et magnis dis parturient 
-			montes, nascetur ridiculus mus. Donec quam felis, 
-			ultricies nec, pellentesque eu, pretium quis, sem.</p>
-			<h2>Aenean commodo ligula eget dolor aenean massa</h2>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-			elit. Aenean commodo ligula eget dolor. Aenean massa. 
-			Cum sociis natoque penatibus et magnis dis parturient 
-			montes, nascetur ridiculus mus. Donec quam felis, 
-			ultricies nec, pellentesque eu, pretium quis, sem.</p>
-			<ul>
-			  <li>Lorem ipsum dolor sit amet consectetuer.</li>
-			  <li>Aenean commodo ligula eget dolor.</li>
-			  <li>Aenean massa cum sociis natoque penatibus.</li>
-			</ul>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-			elit. Aenean commodo ligula eget dolor. Aenean massa. 
-			Cum sociis natoque penatibus et magnis dis parturient 
-			montes, nascetur ridiculus mus. Donec quam felis, 
-			ultricies nec, pellentesque eu, pretium quis, sem.</p>
-			<form action="#" method="post">
-			  <fieldset>
-				<label for="name">Name:</label>
-				<input type="text" id="name" placeholder="Enter your 
-			full name" />
+  <!-- Products Section -->
 
-				<label for="email">Email:</label>
-				<input type="email" id="email" placeholder="Enter 
-			your email address" />
+ 
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">KUKA</h3>
+  </div>
 
-				<label for="message">Message:</label>
-				<textarea id="message" placeholder="What's on your 
-			mind?"></textarea>
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">1st project test</div>
+        <img src="./imgSlide/smaller/slide1.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">2st project test</div>
+        <img src="./imgSlide/smaller/slide3.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">3st project test</div>
+        <img src="./imgSlide/smaller/slide1.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">4st project test</div>
+        <img src="./imgSlide/smaller/slide4.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+  </div>
 
-				<input type="submit" value="Send message" />
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">5st project test</div>
+        <img src="./imgSlide/smaller/slide4.png" alt="test2" style="width:99%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">6st project test</div>
+        <img src="./imgSlide/smaller/slide3.png" alt="test2" style="width:99%">
+       </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">7st project test</div>
+        <img src="./imgSlide/smaller/slide4.png" alt="test2" style="width:99%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">8st project test</div>
+        <img src="./imgSlide/smaller/slide1.png" alt="test2" style="width:99%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+  </div>
+  
+  
+  												<div>
+													<h3>VIEW MORE</h3>
+												</div>
+  
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">FANUC</h3>
+  </div>
 
-			  </fieldset>
-			</form>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-			elit. Aenean commodo ligula eget dolor. Aenean massa. 
-			Cum sociis natoque penatibus et magnis dis parturient 
-			montes, nascetur ridiculus mus. Donec quam felis, 
-			ultricies nec, pellentesque eu, pretium quis, sem.</p>
-			<table class="data">
-			  <tr>
-				<th>Entry Header 1</th>
-				<th>Entry Header 2</th>
-				<th>Entry Header 3</th>
-				<th>Entry Header 4</th>
-			  </tr>
-			  <tr>
-				<td>Entry First Line 1</td>
-				<td>Entry First Line 2</td>
-				<td>Entry First Line 3</td>
-				<td>Entry First Line 4</td>
-			  </tr>
-			  <tr>
-				<td>Entry Line 1</td>
-				<td>Entry Line 2</td>
-				<td>Entry Line 3</td>
-				<td>Entry Line 4</td>
-			  </tr>
-			  <tr>
-				<td>Entry Last Line 1</td>
-				<td>Entry Last Line 2</td>
-				<td>Entry Last Line 3</td>
-				<td>Entry Last Line 4</td>
-			  </tr>
-			</table>
-	</div>	
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">1st project test</div>
+        <img src="./imgSlide/smaller/slide1.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">2st project test</div>
+        <img src="./imgSlide/smaller/slide3.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">3st project test</div>
+        <img src="./imgSlide/smaller/slide1.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">4st project test</div>
+        <img src="./imgSlide/smaller/slide4.png" alt="test" style="width:100%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">5st project test</div>
+        <img src="./imgSlide/smaller/slide4.png" alt="test2" style="width:99%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">6st project test</div>
+        <img src="./imgSlide/smaller/slide3.png" alt="test2" style="width:99%">
+       </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">7st project test</div>
+        <img src="./imgSlide/smaller/slide4.png" alt="test2" style="width:99%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">8st project test</div>
+        <img src="./imgSlide/smaller/slide1.png" alt="test2" style="width:99%">
+      </div>
+												<div>
+													<h3>descripcion</h3>
+												</div>
+    </div>
+  </div>
+    											<div>
+													<h3>VIEW MORE</h3>
+												</div>
+  
+  
+  
 <!-- NO TOCAR ABAJO	-->
+
 	<div class="ex1">
+
+<!-- 	
 	<a href="http://www.facebook.com/eurobots" target="_blank">
-		<i class="fa fa-facebook-f" style="font-size:33px"></i>
+		<i class="fa fa-facebook-f" style="font-size:50px"></i>
 	</a>
 	<a href="https://plus.google.com/100464904590810318852" rel="publisher" target="_blank">
-		<i class="fa fa-google-plus" style="font-size:33px"></i>
+		<i class="fa fa-google-plus" style="font-size:50px"></i>
     </a>
 	<a href="http://www.youtube.com/user/usedrobot2008#p/u" target="_blank">
-        <i class="fa fa-youtube" style="font-size:33px;"></i>
+        <i class="fa fa-youtube" style="font-size:50px;"></i>
     </a>
-	<a href="http://twitter.com/matteotenti" target="_blank">
-		<i class="fa fa-twitter" style="font-size:33px"></i>
+
+-->	
+	<a href="http://www.youku.com/" class="youkuIcon" target="_blank">
+		<img class="youkuIcon" src="logo/youku.svg" width="65px" height="65px"></img>
+	</a>
+	<a href="weixin://dl/chat?{fanye2013bilbao}" target="_blank">
+		<img src="logo/wechat.svg" width="50px" height="50px"></img>
 	</a>
 	
 	</div>
+	
+	
 </body>
 
 </div>
