link spare to products
tonteria link de la pag spare a products

--- a/spareparts.html
+++ b/spareparts.html
@@ -20,7 +20,7 @@
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
 			<a href="#top" class="w3-bar-item w3-button"><img src="imgSlide/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
 			<div class="w3-right w3-hide-small">
-			  <a href="#products" class="w3-bar-item w3-button">Products</a>
+			  <a href="products.html#products" class="w3-bar-item w3-button">Products</a>
 			  <a href="index.html#projects" class="w3-bar-item w3-button">Projects</a>
 			  <a href="AboutUs.html" class="w3-bar-item w3-button active">About Us</a>
 			  <a href="index.html#contact" class="w3-bar-item w3-button">Contact</a>
@@ -35,7 +35,7 @@
 <div class="topnav" id="myTopnav">
 	<div class="blockBar">
 		<a href="index.html#banner">HOME</a>
-		<a href="#usedRobots">ROBOTS</a>
+		<a href="products.html#usedRobots">ROBOTS</a>
 		<a href="integration.html#welding">WELDING </a>
 		<a href="integration.html#milling">MILLING PACKAGE</a>
 		<a class="active" href="#spareParts">SPARE PARTS</a>
