--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 	
 <body>
 
-<div>
-	<h1 class="titulo">nombre y foto del logotipo </h1>
+<div class="tituloLogo">
+<div class="centrado">
+	<img class="logo" src="logo/logoNowhite.png" alt="fanrobotarms">
+</div>
 </div>
 
 
@@ -28,7 +30,7 @@
 <div id='body_div'>
 		<nav id='nav_bar'>
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
-			<a href="#myanchor" class="w3-bar-item w3-button"><img src="imgSlide/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
+			<a href="#myanchor" class="w3-bar-item w3-button"><img src="logo/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
 			<div class="w3-right w3-hide-small">
 			  <a href="products.html" class="w3-bar-item w3-button">Products</a>
 			  <a href="#projects" class="w3-bar-item w3-button">Projects</a>
@@ -44,45 +46,29 @@
 	<div class="blockBar">
 		<a class="active" href="index.html#banner">HOME</a>
 		<a href="products.html#usedRobots">ROBOTS</a>
-		<a href="integration.html#welding">WELDING </a>
-		<a href="integration.html#milling">MILLING PACKAGE</a>
+		<a href="integration.html">WELDING & MILLING</a>
 		<a href="spareparts.html#spareParts">SPARE PARTS</a>
+		<a href="AboutUs.html">ABOUT US</a>
 		<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 	</div>
 	</div>
 
 <!-- CUERPO DE LA PAGINA	-->
 
-	<div class="cuerpo">
-	<h1 class="titulo">PAGINA PRINCIPAL</h1>
-	<p>I'm hosted with GitHub Pages.</p>
-	
-	
-	<p>Palindromos.
-	
-	contar que letras son por ejemplo saltar
-	s=1, a=2, l=1, a=1, r=1
-	empezar por el primero y buscar si hay alguna palabra empezando por la misma letra que contenga 
-	nada no funciona creo
+<div class="cuerpo">
+	<div class="descripcion">
+	<p>	EUROBOTS is a company specialized in used industrial robots, offering our customers a single source for used robot sales, robot parts, and industrial automation.
+		We also provide quality arc welding robots, high-payload robot cells for automotive subassemblies, palletizing robots and a great range of peripherals and tools for the robots.
+		Incorporated in 2001 EUROBOTS is located in Zamudio, five minutes from the airport of Bilbao.
+		We stock a large variety of used robots: KUKA, ABB, FANUC, STAUBLI, MOTOMAN... as well as a range of robot parts in our warehouses.
+		We can deliver low cost used robots for many manufacturing applications plus we can make robotic tooling devices for your robotic system through our automation partners, if required.
+		We are also specialists in Trumpf cw solid state lasers which are suitable for welding and cutting applications that require a very high manufacturing quality.
+		Our commitment to customer service begins the first time you contact us.
+		Here you will find information, specifications, and photos of our selection of used industrial robots and other equipment for automation.
 	</p>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-		elit. Aenean commodo ligula eget dolor. Aenean massa 
-		<strong>strong</strong>. Cum sociis natoque penatibus 
-		et magnis dis parturient montes, nascetur ridiculus 
-		mus. Donec quam felis, ultricies nec, pellentesque 
-		eu, pretium quis, sem. Nulla consequat massa quis 
-		enim. Donec pede justo, fringilla vel, aliquet nec, 
-		vulputate eget, arcu. In enim justo, rhoncus ut, 
-		imperdiet a, venenatis vitae, justo. Nullam dictum 
-		felis eu pede <a class="external ext" href="#">link</a> 
-		mollis pretium. Integer tincidunt. Cras dapibus. 
-		Vivamus elementum semper nisi. Aenean vulputate 
-		eleifend tellus. Aenean leo ligula, porttitor eu, 
-		consequat vitae, eleifend ac, enim. Aliquam lorem ante, 
-		dapibus in, viverra quis, feugiat a, tellus. Phasellus 
-		viverra nulla ut metus varius laoreet. Quisque rutrum. 
-		Aenean imperdiet. Etiam ultricies nisi vel augue. 
-		Curabitur ullamcorper ultricies nisi.</p>
+	
+	</div>
+	<h6 class="enlace" href="AboutUs.html"> more about FanRobotArms</h6>
 
 		
   <!-- Project Section -->
