--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
 <div class="cuerpo">
 	<div class="descripcion">
-	<p>	EUROBOTS is a company specialized in used industrial robots, offering our customers a single source for used robot sales, robot parts, and industrial automation.
+	<p>	FanRobotArms is a company specialized in used industrial robots, offering our customers a single source for used robot sales, robot parts, and industrial automation.
 		We also provide quality arc welding robots, high-payload robot cells for automotive subassemblies, palletizing robots and a great range of peripherals and tools for the robots.
-		Incorporated in 2001 EUROBOTS is located in Zamudio, five minutes from the airport of Bilbao.
+		Incorporated in 2001 FanRobotArms is located in Zamudio, five minutes from the airport of Bilbao.
 		We stock a large variety of used robots: KUKA, ABB, FANUC, STAUBLI, MOTOMAN... as well as a range of robot parts in our warehouses.
 		We can deliver low cost used robots for many manufacturing applications plus we can make robotic tooling devices for your robotic system through our automation partners, if required.
 		We are also specialists in Trumpf cw solid state lasers which are suitable for welding and cutting applications that require a very high manufacturing quality.
@@ -177,7 +177,7 @@
 	<div class="ex1">
 
 <!-- 	
-	<a href="http://www.facebook.com/eurobots" target="_blank">
+	<a href="http://www.facebook.com/FanRobotArms" target="_blank">
 		<i class="fa fa-facebook-f" style="font-size:50px"></i>
 	</a>
 	<a href="https://plus.google.com/100464904590810318852" rel="publisher" target="_blank">
